Add edits from an editing pass - pairing with Chris
Happens to fix #6.

--- a/src/diagrams/upstream-neurons.ejs
+++ b/src/diagrams/upstream-neurons.ejs
@@ -111,7 +111,7 @@
             <% } %>
             <span class="annotation ellipsis">…</span>
 
-            <span class="figcaption"><%= factor == 0 ? "HF" : "LF" %>-factor</span>
+            <span class="figcaption" style="white-space: nowrap;"><%= factor == 0 ? "HF" : "LF" %>-factor</span>
             <span></span>
             <% for (const unit of localUnits) {%>
             <div class="unit">
