Fix Figure 10 caption
* Diagram's examples and caption's links had gotten out of sync - fix them
* Add sentence clarifying that the list is not exhaustive

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -457,7 +457,10 @@
       <figcaption style="grid-column-end: text-end">
         <p>
             <a href="#figure-10" class="figure-number">10</a>:
-            Examples of neurons that high-low frequency detectors contribute to: <a href="https://storage.googleapis.com/distill-circuits/inceptionv1-weight-explorer/mixed3b_365.html"><code>mixed3b</code> 365</a> (an hourglass shape detector), <a href="https://storage.googleapis.com/distill-circuits/inceptionv1-weight-explorer/mixed3b_276.html"><code>mixed3b</code> 276</a> (a center-surround texture detector), and <a href="https://storage.googleapis.com/distill-circuits/inceptionv1-weight-explorer/mixed3b_314.html"><code>mixed3b</code> 314</a> (a double boundary detector).
+            Examples of neurons that high-low frequency detectors contribute to: (1) <a href="https://storage.googleapis.com/distill-circuits/inceptionv1-weight-explorer/mixed3b_345.html"><code>mixed3b</code> 345</a> (a boundary detector), (2) <a href="https://storage.googleapis.com/distill-circuits/inceptionv1-weight-explorer/mixed3b_276.html"><code>mixed3b</code> 276</a> (a center-surround texture detector), (3) <a href="https://storage.googleapis.com/distill-circuits/inceptionv1-weight-explorer/mixed3b_314.html"><code>mixed3b</code> 314</a> (a double boundary detector), and (4) <a href="https://storage.googleapis.com/distill-circuits/inceptionv1-weight-explorer/mixed3b_365.html"><code>mixed3b</code> 365</a> (an hourglass shape detector).
+        </p>
+        <p>
+            These aren't the only contributors to these neurons – for example, <code>mixed3b</code> 276</a> also relies heavily on certain center-surrounds and textures – but they are strong contributors.
         </p>
       </figcaption>
       </figure>
