Acknowledge distillpub.slack draft reviewers

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -598,6 +598,8 @@
 
     <p><b>Writing.</b> Chelsea and Ludwig wrote the paper, with feedback from Chris.</p>
 
+    We are also grateful to Jennifer Lin, Stefan Sietzen, and Vincent Tjeng for comments on a draft of this paper.
+
     <!--Potential Limitations-->
     <!-- <h3>Limitations</h3>
     <h4>How bad is the linearization?</h4>
