Fix Acknowledgement indentation

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -598,22 +598,7 @@
 
     <p><b>Writing.</b> Chelsea and Ludwig wrote the paper, with feedback from Chris.</p>
 
-    We are also grateful to Jennifer Lin, Stefan Sietzen, and Vincent Tjeng for comments on a draft of this paper.
-
-    <!--Potential Limitations-->
-    <!-- <h3>Limitations</h3>
-    <h4>How bad is the linearization?</h4>
-    <p class="todo">Maybe we can measure and put up some <em>summary statistics</em> on how bad our linear approximation
-      really is.
-      Maybe in terms of % variance of resulting activation? -> colah if there's sth more principled.</p>
-
-    <figure id="5.1-linearization-badness">
-      <img src="diagrams/5.1-linearization-badness/placeholder.jpg" />
-      <figcaption class="figcaption">
-        Maybe show % of variance explained over distance between layers or sth; if so likely move to appendix.
-      </figcaption>
-    </figure> -->
-
+    <p>We are also grateful to Jennifer Lin, Stefan Sietzen, and Vincent Tjeng for comments on a draft of this paper.</p>
 
     <d-footnote-list></d-footnote-list>
     <d-citation-list></d-citation-list>
