Add Curve Circuits

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -40,7 +40,7 @@
         This article is part of the <a href="/2020/circuits/">Circuits thread</a>, an experimental format collecting invited short articles and critical commentary delving into the inner workings of neural networks.
     </p>
     <a class="prev" href="/2020/circuits/equivariance/">Naturally Occurring Equivariance in Neural Networks</a>
-    <!-- <a class="next" href="/2020/circuits/frequency-edges/">High-Low Frequency Detectors</a> -->
+    <a class="next" href="/2020/circuits/curve-circuits/">Curve Circuits</a>
   </section>
 
     <h2 style="display: none;">Introduction</h2>
@@ -599,7 +599,7 @@
       </p>
 
       <a class="prev" href="/2020/circuits/equivariance/">Naturally Occurring Equivariance in Neural Networks</a>
-      <!-- <a class="next" href="/2020/circuits/frequency-edges/">High-Low Frequency Detectors</a> -->
+      <a class="next" href="/2020/circuits/curve-circuits/">Curve Circuits</a>
   </section>
 
   </d-article>
